# NLP-Project1

./: .gitignore  README.md  destillbert.ipynb  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: ablation_distilbert.yaml  ag_news.yaml  sst2.yaml  yelp_review_full.yaml
config/training/: default_distilbert.yaml
notebooks/: exploratory_analysis.ipynb
report/: Makefile  README.md  main.tex  references.bib
report/tables/: ablation_summary_table.tex  best_distilbert_table.tex  final_efficiency_table.tex  final_performance_table.tex
results/: README.md
results/benchmarks/: benchmark_results.csv
results/metrics/: bert_metrics.csv  best_distilbert_ablation.csv  distilbert_ablation_metrics.csv  distilbert_baseline_metrics.csv  final_comparison_metrics.csv  final_efficiency_metrics.csv
results/tables/: ablation_summary_table.csv  ablation_summary_table.md  best_distilbert_table.csv  best_distilbert_table.md  final_efficiency_table.csv  final_efficiency_table.md  final_performance_table.csv  final_performance_table.md
scripts/: deploy.sh  run_all.sh
src/: __init__.py  ablation.py  aggregate_results.py  benchmark.py  build_report_assets.py  data.py  export_report_tables.py  final_comparison.py  gpu_utils.py  make_results_summary.py  metrics.py  modeling.py  plot_results.py  run_ablation_all.py  run_distilbert_baselines.py  select_best_ablation.py  smoke_test_data.py  train.py  utils.py  visualize.py
