[project]
name = "nlp-project1"
version = "0.1.0"
description = "NLP Project 1: Evaluating LLMs for text classification"
requires-python = ">=3.10"
dependencies = [
    # torch is provided by the RunPod PyTorch image — do NOT install here
    "transformers>=4.30",
    "datasets>=2.14",
    "evaluate",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "accelerate>=0.24",
    "pyyaml>=6.0",
    "safetensors>=0.4",
]